--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="banner-img">
-                                <img src="assets/images/banner/banner-5.png" alt="Image">
+                                <img src="assets/images/banner/banner-7.png" alt="Image">
                             </div>
                         </div>
                     </div>
@@ -262,7 +262,7 @@
                         <div class="col-lg-6">
                             <div class="banner-content">
                                 <h1>Keep Your Patient Health Record Centralized And Safe</h1>
-                                <p>.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable</p>
+                                <p>RapidMedicare cloud-based Electronic health records (EHR) help to maintain a unified database that can be accessed at various points in time from different locations. This health records provide clinicians significant means to study the medical history of patients, and thus enhance medical treatments for several individuals. Built on  secured private cloud, it provides HIPAA compliance and high data security. </p>
                                 <div class="btn-area">
                                     <ul>
                                         <li>
@@ -277,7 +277,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="banner-img">
-                                <!-- <img src="assets/images/banner/banner-6.png" alt="Image"> -->
+                                <img src="assets/images/banner/banner-8.png" alt="Image">
                             </div>
                         </div>
                     </div>
@@ -300,7 +300,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="banner-img">
-                                <!-- <img src="assets/images/banner/banner-2.png" alt="Image"> -->
+                                <img src="assets/images/banner/banner-5.png" alt="Image">
                             </div>
                         </div>
                     </div>
