--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div class="about-img mr-20" data-aos="fade-right" data-aos-duration="1200" data-aos-delay="200">
-                        <img src="assets/images/about/about-1.png" alt="Image">
+                        <img src="assets/images/about/about-2.png" alt="Image">
                         <div class="experience">
                             <p>30 YEARS OF EXPERIENCE DOCTORS</p>
                             <div class="icon">
@@ -538,8 +538,8 @@
                 <div class="col-lg-6">
                     <div class="about-content pl-20"  data-aos="fade-left" data-aos-duration="1200" data-aos-delay="200">
                         <div class="about-title">
-                            <span>About Us</span>
-                            <h2>An Aid Agency For Your Physical And Mental Well-Being</h2>
+                            <span>Online Pharmacy</span>
+                            <h2>Online Pharmacy</h2>
                             <p>There are many variations of passages of Lorem Ipsum available, but the majority haven't in injected humour, or randomised words which don't look even slightly believable.</p>
 
                         </div>
