--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         <div class="col-lg-6">
                             <div class="banner-content">
                                 <h1 data-aos="fade-up" data-aos-duration="1300" data-aos-delay="200">Find The Perfect Doctor For Your Health Need</h1>
-                                <p data-aos="fade-up" data-aos-duration="1300" data-aos-delay="400">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+                                <p data-aos="fade-up" data-aos-duration="1300" data-aos-delay="400">Whether you are in a foreign country, in an unfamiliar city, or by the roadside in the middle of nowhere, you do not need to memorise numbers as this app will alert you of nearby hospitals, medical laboratories, and pharmacies and their contact numbers, by placing a pin on Google Maps and showing your position in relation to the hospitals, medical labs, and pharmacy stores.</p>
                                 <div class="btn-area">
                                     <ul>
                                         <li>
@@ -526,112 +526,93 @@
 </div>
 <!--End About area-->
        
-
-        <!--Start Review Area-->
-        <div class="review-area pt-100 pb-70">
-            <div class="container">
-                <div class="section-title">
-                    <span class="top-title">Review</span>
-                    <h2>What Do They Say About Us?</h2>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-4 col-md-6">
-                        <div class="single-riview-card" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
-                            <span>February 07, 2022</span>
-                            <p>There are many variations of passages Lorem Ipsum available, in injected humour, random ised words the printing believable.</p>
-                            <div class="profile">
-                                <img src="assets/images/review/review-1.png" alt="Image">
-                                <h4>Imelda Strosin</h4>
-                                <p>Cardiologist</p>
-                                <i class="flaticon-quotes"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="400">
-                        <div class="single-riview-card">
-                            <span>February 07, 2022</span>
-                            <p>There are many variations of passages Lorem Ipsum available, in injected humour, random ised words the printing believable.</p>
-                            <div class="profile">
-                                <img src="assets/images/review/review-2.png" alt="Image">
-                                <h4>Isom Reichel</h4>
-                                <p>Medicine</p>
-                                <i class="flaticon-quotes"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="600">
-                        <div class="single-riview-card">
-                            <span>February 07, 2022</span>
-                            <p>There are many variations of passages Lorem Ipsum available, in injected humour, random ised words the printing believable.</p>
-                            <div class="profile">
-                                <img src="assets/images/review/review-3.png" alt="Image">
-                                <h4>Filiberto Crooks</h4>
-                                <p>Neurologiest</p>
-                                <i class="flaticon-quotes"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+ <!--Start Testimonial Area-->
+ <div class="testimonial-area">
+    <div class="container-fluid">
+        <div class="testimonial-bg bg-color1 ptb-100">
+            <div class="section-title">
+                <span class="top-title">Testimonials</span>
+                <h2>What Do They Say About Us?</h2>
             </div>
-        </div>
-        <!--End Review Area-->
-
-        <!--Start Advice Area-->
-        <div class="advice-area pt-for-responsive pb-100">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <div class="advice-content pr-20" data-aos="fade-right" data-aos-duration="1300" data-aos-delay="300">
-                            <div class="advice-title">
-                                <span>Online Advice</span>
-                                <h2>Find Doctor Online Today And Skip The Waiting Room</h2>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority haven't in injected humour, or randomised words which don't look even slightly believable.</p>
-                            </div>
-                            <div class="list">
-                                <div class="row">
-                                    <div class="col-lg-5 col-md-6">
-                                        <ul>
-                                            <li>
-                                                <i class="ri-phone-line"></i>
-                                                <p>Call Now For Free</p>
-                                                <a href="tel:+7854-9654-258">(+7854-9654-258)</a>
-                                            </li>
-                                            <li>
-                                                <i class="ri-map-pin-user-line"></i>
-                                                <p>Address Here</p>
-                                                <span>10/ New York City</span>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-5 col-md-6">
-                                        <ul>
-                                            <li>
-                                                <i class="ri-time-line"></i>
-                                                <p>Opening Hours</p>
-                                                <span>Sat-Thu: 8:00am 8:00pm</span>
-                                            </li>
-                                            <li>
-                                                <i class="ri-exchange-dollar-line"></i>
-                                                <p>Easy Money Back</p>
-                                                <span>Guarantee Money Return</span>
-                                            </li>
-                                        </ul>
-                                    </div>
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <div class="testimonial-slider2 owl-carousel owl-theme">
+                        <div class="testimonial-content">
+                            <div class="top-content">
+                                <h3>The Way Customers Do It</h3>
+                                <p>“It is a long established fact that a reader will be distracted by the readable content of a to page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-les normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English uncover many web sites still in their infancy.”</p>
+                                <div class="star-list">
+                                    <ul>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                    </ul>
                                 </div>
                             </div>
-                            <a href="contact-us.html" class="default-btn btn">Contact Us</a>
+                            <div class="clients-profile">
+                                <img src="assets/images/review/review-1.png" alt="Image">
+                                <h4>Maddison Reichel</h4>
+                                <p>Remediable</p>
+                            </div>
+                        </div>
+                        <div class="testimonial-content">
+                            <div class="top-content">
+                                <h3>The Way Customers Do It</h3>
+                                <p>“It is a long established fact that a reader will be distracted by the readable content of a to page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-les normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English uncover many web sites still in their infancy.”</p>
+                                <div class="star-list">
+                                    <ul>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="clients-profile">
+                                <img src="assets/images/review/review-1.png" alt="Image">
+                                <h4>Adella Johnston</h4>
+                                <p>Medication</p>
+                            </div>
+                        </div>
+                        <div class="testimonial-content">
+                            <div class="top-content">
+                                <h3>The Way Customers Do It</h3>
+                                <p>“It is a long established fact that a reader will be distracted by the readable content of a to page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-les normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English uncover many web sites still in their infancy.”</p>
+                                <div class="star-list">
+                                    <ul>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="clients-profile">
+                                <img src="assets/images/review/review-1.png" alt="Image">
+                                <h4>Adella Johnston</h4>
+                                <p>Medication</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="advice-img pl-20" data-aos="fade-left" data-aos-duration="1300" data-aos-delay="300">
-                            <img src="assets/images/advice/advice-1.png" alt="Image">
+                </div>
+                <div class="col-lg-6">
+                    <div class="testimonial-img-content">
+                        <img src="assets/images/review/testimonial-img.png" alt="Image">
+                        <div class="icon">
+                            <a class="popup-youtube play-btn" href="https://www.youtube.com/watch?v=6WQCJx_vEX4"><i class="flaticon-play-button-arrowhead"></i></a>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
-        <!--End Advice Area-->
+    </div>
+</div>
+<!--End Testimonial Area-->
+
 
         <!-- Start Contact Doctor Area-->
         <div class="contact-doctor-area ptb-100">
