--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         <div class="demo-row " style="margin-bottom: 50px;"> 
             <div class="container" id="id-sponsors">
               <div class="text-center">
-              <h2 style="margin:20px 0;color:#fff;">Sponsors</h2>
+              <h2 style="margin:20px 0;color:#005fb0;">Sponsors</h2>
             </div>
             <div id="sponsor-carousel" class="carousel slide" data-ride="carousel"> 
               <!-- Indicators -->
