--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!--Responsive css-->
         <link rel="stylesheet" href="assets/css/responsive.css">
         <title>RapidMedicare</title>
-        <link rel="icon" type="image/png" href="assets/images/favicon.png">
+     
     </head>
     <body>
         <!-- Start Preloader Area -->
@@ -357,47 +357,16 @@
                                     <h2>About Us</h2>
                                     <p>At RapidMedicare, we like to say that we’re the first choice of healthcare systems who are ready to make a change. We believe success comes from dedication and commitment, that our differences make us stronger, and that arriving at the finish line together is always sweeter than going alone. That’s why we've built the world's most customer centric international startup called RapidMedicare— so our clients ( and we!) can achieve the missions that matters.
                                         </p>
+                                      
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-6 col-md-6">
-                                        <div class="list1">
-                                            <ul>
-                                                <li>
-                                                    <i class="ri-checkbox-circle-line"></i>
-                                                    <p>Doctor-On-Demand/Appointment Bookings</p>
-                                                </li>
-                                                <li>
-                                                    <i class="ri-checkbox-circle-line"></i>
-                                                    <p>On-Demand Pharmacy</p>
-                                                </li>
-                                                <li>
-                                                    <i class="ri-checkbox-circle-line"></i>
-                                                    <p>On-Demand Medical Test Bookings</p>
-                                                </li>
-                                                <li>
-                                                    <i class="ri-checkbox-circle-line"></i>
-                                                    <p>Swift Delivery of Medicine</p>
-                                                </li>
-                                            </ul>
-                                        </div>
+                                    <div class="col-lg-6 col-md-6" style="margin-bottom: 20px;">
+                                        <h2>Mission</h2>
+                                        <p> To transform the way people access healthcare and make it easy for them to go online and talk to licensed doctors or pharmacist within minutes</p>
                                     </div>
                                     <div class="col-lg-6 col-md-6">
-                                        <div class="list2">
-                                            <ul>
-                                                <li>
-                                                    <i class="ri-checkbox-circle-line"></i>
-                                                    <p>Centralised Patient Electronic Health Record</p>
-                                                </li>
-                                                <li>
-                                                    <i class="ri-checkbox-circle-line"></i>
-                                                    <p>End-to-End Patient-to-DoctorChat encryption</p>
-                                                </li>
-                                                <li>
-                                                    <i class="ri-checkbox-circle-line"></i>
-                                                    <p>Artificial Intelligence to Monitor Patient Drug Compliance</p>
-                                                </li>
-                                            </ul>
-                                        </div>
+                                        <h2>Vision</h2>
+                                        <p> We envision a world where the 2.9 million deaths yearly from lack of access to healthcare becomes a history — a world with zero death from lack of access to healthcare</p>
                                     </div>
                                 </div>
                                 <a href="contact-us.html" class="default-btn btn">Contact Us <span></span></a>
