--- a/index.html
+++ b/index.html
@@ -355,7 +355,9 @@
                                 <div class="choose-title">
                                     <span>Who We Are</span>
                                     <h2>About Us</h2>
-                                    <p>At RapidMedicare, we like to say that we’re the first choice of healthcare systems who are ready to make a change. We believe success comes from dedication and commitment, that our differences make us stronger, and that arriving at the finish line together is always sweeter than going alone. That’s why we've built the world's most customer centric international startup called RapidMedicare— so our clients ( and we!) can achieve the missions that matters.
+                                    <p>At RapidMedicare, we like to say that we’re the first choice of healthcare systems who are ready to make a change. We believe success 
+                                        comes from dedication and commitment, that our differences make us stronger, 
+                                        and that arriving at the finish line together is always sweeter than going alone. That’s why we've built the world's most customer centric international startup called RapidMedicare— so our clients ( and we!) can achieve the missions that matters.
                                         </p>
                                       
                                 </div>
