--- a/contact-us.html
+++ b/contact-us.html
@@ -28,7 +28,7 @@
         <link rel="stylesheet" href="assets/css/dark.css">
         <!--Responsive css-->
         <link rel="stylesheet" href="assets/css/responsive.css">
-        <title>Genh -Telemedicine & Telehealth Services HTML Template</title>
+        <title>RapidMedicare</title>
         <link rel="icon" type="image/png" href="assets/images/favicon.png">
     </head>
     <body>
@@ -69,7 +69,7 @@
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link  active">
+                                    <a href="index.html" class="nav-link  active">
                                         Home            
                                     </a>
                                 </li>
@@ -292,7 +292,7 @@
         <!--End Contact Area-->
 
         <!--Start Map ARea-->
-        <div class="map-area">
+        <div class="map-area" style="margin-bottom: 50px;">
             <div class="container">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6097695.234893263!2d-105.45118365431676!3d41.73367466353485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87938dc8b50cfced%3A0xa127900c0ff30ac4!2sNebraska%2C%20USA!5e0!3m2!1sen!2sbd!4v1648401285643!5m2!1sen!2sbd" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
