--- a/index.html
+++ b/index.html
@@ -256,7 +256,11 @@
             </div>
         </div>
         <!--End Features Area-->
-   
+   <section>
+       <div class="free" style="padding: 80px; background-color: #005fb0; margin-bottom: 50px;">
+           <h1 style="color: white; font-size: 21px; text-align: center;">We envision a world where the 2.9 million deaths yearly from lack of access to healthcare becomes a history — a world with zero death from lack of access to healthcare</h1>
+       </div>
+   </section>
         <div class="choose-area ">
             <div class="container-fluid">
                 <div class="choose-us-bg bg-color1 ptb-100">
