--- a/contact-us.html
+++ b/contact-us.html
@@ -192,7 +192,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="page-banner-img">
-                            <img src="assets/images/page-header/page-header-img-2.png" alt="Image">
+                            <!-- <img src="assets/images/page-header/page-header-img-2.png" alt="Image"> -->
                         </div>
                     </div>
                 </div>
