--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 <!--End About area-->
 
         <!--Start Work Area-->
-        <div class="work-area ptb-100"  style="background-color: rgb(70, 70, 236);">
+        <div class="work-area ptb-100"  style="background-color: #005fb0;">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
