--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <!--End Features Area-->
    <section>
        <div class="free" style="padding: 80px; background-color: #005fb0; margin-bottom: 50px;">
-           <h1 style="color: white; font-size: 21px; text-align: center;">We envision a world where the 2.9 million deaths yearly from lack of access to healthcare becomes a history — a world with zero death from lack of access to healthcare</h1>
+           <h1 style="color: white; font-size: 25px; text-align: center;">The Smart Way To Find Doctors Nearby</h1>
        </div>
    </section>
         <div class="choose-area ">
@@ -440,6 +440,11 @@
             </div>
         </div>
         <!--End Dooctors Area-->
+        <section>
+            <div class="free" style="padding: 80px;  margin-bottom: 50px; margin-top: 50px; background: rgba(12, 70, 228, 0.05)">
+                <h1 style="color: #005fb0; font-size: 25px; text-align: center;">No Subscriptions Needed</h1>
+            </div>
+        </section>
 <!--Start About area-->
 <div class="about-area" >
     <div class="container">
@@ -526,7 +531,7 @@
                             <div class="contact-title">
                                 <span>Contact Us</span>
                                 <h2>Contact Our Specialist Doctor At Any Time For Any Of Your Ailments</h2>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority haven't in humour, or randomised words which don't look even slightly believable.</p>
+                                
                             </div>
                         </div>
                     </div>
@@ -581,7 +586,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <div class="logo-area" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
                                 <!-- <a href="index.html"><img src="assets/images/white-logo.png" alt="Image"></a> -->
-                                <p>There are many variations of passages of in humour, or randomised believable.</p>
+                                <p></p>
                                 <form class="newsletter-form" data-toggle="validator">
                                     <input type="email" class="form-control" placeholder="Your Email" name="EMAIL" required autocomplete="off">
                         
