--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <div class="mobile-responsive-menu">
                         <div class="logo">
                             <a href="index.html">
-                                <img src="assets/images/logo1.jpg.png" class="main-logo" alt="logo"> 
-                                <img src="assets/images/logo1.jpg.png" class="white-logo" alt="logo"> 
+                                <img src="assets/images/logo-tranparent.png" class="main-logo" alt="logo"> 
+                                <img src="assets/images/logo-tranparent.png" class="white-logo" alt="logo"> 
                             </a>
                         </div>
                     </div>
@@ -61,8 +61,8 @@
                 <div class="container-fluid">
                     <nav class="navbar navbar-expand-md navbar-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/images/logo1.jpg.png" class="main-logo" alt="logo"> 
-                            <img src="assets/images/logo1.jpg.png" class="white-logo" alt="logo"> 
+                            <img src="assets/images/logo-tranparent.png" class="main-logo" alt="logo"> 
+                            <img src="assets/images/logo-tranparent.png" class="white-logo" alt="logo"> 
                         </a>
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav m-auto">
@@ -116,7 +116,7 @@
                                 </li>
                             </ul>
 
-                            <div class="others-options">
+                            <!-- <div class="others-options">
                                 <ul>
                                     <li>
                                         <div class="call-now">
@@ -129,44 +129,13 @@
                                         <a href="appoinment.html" class="default-btn btn">Book a Demo</a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </nav>
                 </div>
             </div>
 
-            <div class="others-option-for-responsive">
-                <div class="container">
-                    <div class="dot-menu">
-                        <div class="inner">
-                            <div class="circle circle-one"></div>
-                            <div class="circle circle-two"></div>
-                            <div class="circle circle-three"></div>
-                        </div>
-                    </div>
-                    
-                    <div class="container">
-                        <div class="option-inner">
-                            <div class="others-options justify-content-center d-flex align-items-center">
-                                <div class="others-options">
-                                <ul>
-                                    <li>
-                                        <div class="call-now">
-                                            <i class="flaticon-phone-call-1"></i>
-                                            <p>Call Now For Free</p>
-                                            <a href="tel:021-6523-3652">021-6523-3652</a>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <a href="appoinment.html" class="default-btn btn">Book a Demo</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+           
         </div>
         <!-- End Navbar Area -->
 
