--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 </li>
                             </ul>
 
-                            <!-- <div class="others-options">
+                            <div class="others-options">
                                 <ul>
                                     <li>
                                         <div class="call-now">
@@ -129,7 +129,7 @@
                                         <a href="appoinment.html" class="default-btn btn">Book a Demo</a>
                                     </li>
                                 </ul>
-                            </div> -->
+                            </div>
                         </div>
                     </nav>
                 </div>
@@ -193,7 +193,28 @@
             </div>
         </div>
         <!--End Banner Area-->
-
+        <section class="sub">
+            <div class="con-sub">
+                <h1>No Subscriptions Needed</h1>
+                <h3>It is:</h1>
+                <div class="list">
+                    <ul>
+                        <li>
+                            <i ></i>
+                            <p>Fast & Safe</p>
+                        </li>
+                        <li>
+                            <i ></i>
+                            <p>Convenient & Flexible</p>
+                        </li>
+                        <li>
+                            <i ></i>
+                            <p>Improves Result</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
         <!--Start Features Area-->
         <div class="featured-area pt-100 pb-70">
             <div class="container">
@@ -409,11 +430,7 @@
             </div>
         </div>
         <!--End Dooctors Area-->
-        <section>
-            <div class="free" style="padding: 80px;  margin-bottom: 50px; margin-top: 50px; background: rgba(12, 70, 228, 0.05)">
-                <h1 style="color: #005fb0; font-size: 25px; text-align: center;">No Subscriptions Needed</h1>
-            </div>
-        </section>
+       
 <!--Start About area-->
 <div class="about-area" >
     <div class="container">
