--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                 </div>
                             </div>
                             <div class="doctor-card-content">
-                                <h3>Ekele Augustine</h3>
+                                <h3 style="color: black;">Ekele Augustine</h3>
                                 <p>Founder/CEO</p>
                             </div>
                         </div>
@@ -368,7 +368,7 @@
                                 </div>
                             </div>
                             <div class="doctor-card-content">
-                                <h3>Ekaette Mathias</h3>
+                                <h3 style="color: black;">Ekaette Mathias</h3>
                                 <p>Product Manager</p>
                             </div>
                         </div>
@@ -395,7 +395,7 @@
                                 </div>
                             </div>
                             <div class="doctor-card-content">
-                                <h3>Victory Omoregbee</h3>
+                                <h3 style="color: black;">Victory Omoregbee</h3>
                                 <p>Director of Operation</p>
                             </div>
                         </div>
@@ -422,7 +422,7 @@
                                 </div>
                             </div>
                             <div class="doctor-card-content">
-                                <h3>Abuh Solomon</h3>
+                                <h3 style="color: black;">Abuh Solomon</h3>
                                 <p>Chief Technical Officer</p>
                             </div>
                         </div>  
